# ConfigurationLoader

./: CMakeLists.txt  README.md
include/: configuration_loader.hpp
src/: configuration_loader.hpp  main.cpp  simulation_configuration.hpp
